--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -3,8 +3,23 @@
   height: 100%;
 }
 
-.shipping-table {
+.left {
+  height: 100%;
+
+  padding-left: 15px;
+  padding-right: 15px;
+
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+}
+
+.left > h1 {
+  text-align: center;
+  font-size: 26px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.shipping-list {
+  flex-grow: 1;
 }
